# Modpack_Translator

./: .gitignore  LICENSE  MODEL_LICENSE.md  README.md  README_zh.md  main.py  pyproject.toml  setup_unix.sh  setup_windows.bat
.github/workflows/: release.yml
adapter/: minecraft_translator_gemma4_e4b_lora.gguf
assets/glossary/: modnames_zh_tw.json  zh_tw_1.13.1.json  zh_tw_1.13.json  zh_tw_1.14.1.json  zh_tw_1.14.4.json  zh_tw_1.15.1.json  zh_tw_1.15.2.json  zh_tw_1.16.1.json  zh_tw_1.16.2.json  zh_tw_1.16.3.json  zh_tw_1.16.json  zh_tw_1.17.1.json  zh_tw_1.18.2.json  zh_tw_1.19.2.json  zh_tw_1.19.3.json  zh_tw_1.19.4.json  zh_tw_1.20.1.json  zh_tw_1.20.2.json  zh_tw_1.20.3.json  zh_tw_1.20.6.json  zh_tw_1.21.1.json  zh_tw_1.21.11.json  zh_tw_1.21.2.json  zh_tw_1.21.3.json  zh_tw_1.21.4.json  zh_tw_1.21.5.json  zh_tw_1.21.6.json  zh_tw_1.21.9.json  zh_tw_1.21.json  zh_tw_26.1.1.json  zh_tw_26.2.json
configs/: model.yaml  paths.yaml
configs/languages/: zh_tw.yaml
docs/superpowers/plans/: 2026-07-01-remote-openai-api.md  2026-07-02-remote-stats-and-gui-log.md  2026-07-03-context-translation.md  2026-07-03-modname-glossary.md  2026-07-06-oracle-wiki-mdx.md  2026-07-20-server-sync.md
docs/superpowers/specs/: 2026-07-01-remote-openai-api-design.md  2026-07-02-remote-stats-and-gui-log-design.md  2026-07-03-context-translation-design.md  2026-07-03-modname-glossary-design.md  2026-07-06-oracle-wiki-mdx-design.md  2026-07-13-guideme-md-design.md  2026-07-20-server-sync-design.md
scripts/: build_glossary.py  build_windows_launcher.ps1  setup_backend.py  translate_modpack.py  updater.py
src/modpack_translator/: config.py  version.py
src/modpack_translator/gui/: context_dialog.py  glossary_dialog.py  main_window.py  stats.py  theme.py  worker.py
tests/: test_batch_prefill.py  test_batch_prefill_glossary.py  test_chat.py  test_citadel_book.py  test_citadel_book_run.py  test_citadel_book_scan.py  test_config.py  test_context_injection.py  test_context_recording.py  test_data_lang_scan.py  test_data_patchouli_scan.py  test_datapack_literals.py  test_dawncraft_dialogue.py  test_failed_items_regression.py  test_glossary.py  test_glossary_enforce.py  test_glossary_merge.py  test_glossary_multi_inject.py  test_gui_label_false_kills.py  test_gui_stats.py  test_guideme_md.py  test_guideme_run.py  test_guideme_scan.py  test_guideme_tokens.py  test_inline_snbt_text.py  test_lang_filename_case.py  test_lenient_json_lang.py  test_mdx.py  test_newline_preservation.py  test_oracle_meta.py  test_oracle_wiki_run.py  test_oracle_wiki_scan.py  test_pack_context.py  test_patcher_write_text.py  test_preprocessor_glossary_gate.py  test_preprocessor_lang_compat.py  test_rct_names_run.py  test_rct_names_scan.py  test_remote_translator.py  test_resource_pack_scan.py  (+15 more)
(+17 files in other folders)
