[project]
name = "modpack-translator"
version = "1.2.0"
description = "Minecraft modpack translator (en_us → zh_tw) using GGUF model inference"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tqdm>=4.0",
    # Runtime inference goes through an OpenAI-compatible local HTTP server.
    # Run setup_windows.bat or setup_unix.sh to install the correct CUDA wheel,
    # AMD llama.cpp binary, or CPU server backend for the current machine.
    "openai>=1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic-settings>=2.0.1",
    "sse-starlette>=1.6.1",
    "starlette-context>=0.3.6,<0.4",
    "huggingface-hub>=0.23.0",
    "PySide6>=6.6.0",
]

[tool.uv]
python-preference = "only-managed"
